# skrrtthing

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
scripts/: make-icon.mjs
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/dashboard/: BreakdownCard.tsx  ConnectionsCard.tsx  GoalHero.tsx  RecentActivity.tsx  WeeklyCard.tsx
src/components/layout/: Page.tsx  Sidebar.tsx
src/components/log/: LogRow.tsx
src/components/ui/: Button.tsx  Card.tsx  EmptyState.tsx  Input.tsx  Modal.tsx  ProgressBar.tsx  StatusDot.tsx
src/components/wizard/: CopyField.tsx  StepDots.tsx
src/hooks/: useAppInit.ts  useNow.ts  useTextOutput.ts  useUpdateChecker.ts
src/lib/: env.ts  external.ts  format.ts  goal.ts  paths.ts  storage.ts  textOutput.ts  week.ts  weeklyGoal.ts  weeklyWindow.ts
src/pages/: Dashboard.tsx  EventLog.tsx  Settings.tsx  Statistics.tsx  Wizard.tsx  index.ts
src/services/: updates.ts
src/services/streamlabs/: socket.ts
src/services/twitch/: api.ts  eventsub.ts  types.ts
src/stores/: connectionStore.ts  goalStore.ts  settingsStore.ts  textOutputStore.ts  updateStore.ts  wizardStore.ts
