[package]
name = "goaldock"
version = "0.1.3"
description = "Weekly community goal tracker for Twitch"
authors = ["verrucosity"]
license = "MIT"
edition = "2021"

[lib]
name = "goaldock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
